[tool.poetry]
name = "repl_python3_Final-project-DigiPeopleC3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cprint = "^1.2.2"
termcolor = "^1.1.0"
playsound = "^1.3.0"
python-vlc = "^3.0.12118"
replit = "^3.2.4"
passlib = "^1.7.4"
stdiomask = "^0.0.6"
guizero = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
